[gd_scene load_steps=3 format=3 uid="uid://cfqcn0v8abrtn"]

[ext_resource type="Texture2D" uid="uid://dii07osvednul" path="res://графика/спрайты/кнопка.png" id="1_e70cd"]
[ext_resource type="Script" path="res://scens/menuButton.gd" id="1_n07dy"]

[node name="menu" type="Node2D"]
script = ExtResource("1_n07dy")

[node name="play" type="TextureButton" parent="."]
offset_left = 413.0
offset_top = 182.0
offset_right = 737.0
offset_bottom = 357.0
texture_normal = ExtResource("1_e70cd")
stretch_mode = 6

[node name="Label" type="Label" parent="play"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 120.0
offset_top = 51.0
offset_right = -120.0
offset_bottom = -52.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "Play"

[node name="quit" type="TextureButton" parent="."]
offset_left = 413.0
offset_top = 310.0
offset_right = 737.0
offset_bottom = 485.0
texture_normal = ExtResource("1_e70cd")
stretch_mode = 6

[node name="Label" type="Label" parent="quit"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 120.0
offset_top = 53.0
offset_right = -120.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "Quit"

[node name="en" type="TextureButton" parent="."]
visible = false
offset_left = 525.0
offset_top = 524.0
offset_right = 625.0
offset_bottom = 624.0
texture_normal = ExtResource("1_e70cd")

[node name="Label" type="Label" parent="en"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 39.0
offset_top = 35.0
offset_right = -41.0
offset_bottom = -39.0
grow_horizontal = 2
grow_vertical = 2
text = "en
"

[node name="ru" type="TextureButton" parent="."]
offset_left = 525.0
offset_top = 524.0
offset_right = 625.0
offset_bottom = 624.0
texture_normal = ExtResource("1_e70cd")

[node name="Label" type="Label" parent="ru"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = 36.0
offset_right = -16.0
offset_bottom = -38.0
grow_horizontal = 2
grow_vertical = 2
text = "ru"

[connection signal="button_down" from="play" to="." method="_on_play_button_down"]
[connection signal="button_down" from="quit" to="." method="_on_quit_button_down"]
[connection signal="pressed" from="en" to="." method="_on_pc_pressed"]
[connection signal="pressed" from="ru" to="." method="_on_mobil_pressed"]
